--- a/prototype/prototype1.tex
+++ b/prototype/prototype1.tex
@@ -2,9 +2,9 @@
 
 Following the conclusions and requirements elicited in the previous chapter, it is now time to answer the second question from the problem statement: \textbf{What is the Blockchain tool or framework most adequate to the development of an architecture that can support these requirements?}
 
-In order to make a good choice for the framework, there is a need to make a mixed analysis that focuses on the most important functionalities that an information system should feature as well as what use cases are most viable for applying blockchain to the supply chain. %TODO: reference the chapter instead
+In order to make a good choice for the framework, there is a need to make a mixed analysis that focuses on the most important functionalities that an information system should feature as well as what use cases are most viable for applying blockchain to the supply chain.
 
-In addition to the requirements from the previous chapter, the performance analysis from Chapter~\ref{sec-performance-comparison} should also be taken into account. %TODO: reference the chapter instead
+In addition to the requirements from the previous chapter, the performance analysis from Chapter~\ref{sec-performance-comparison} should also be taken into account.
 
 \subsection{Framework Requirements Elicited from the Survey}
 
