--- a/prototype/prototype3.tex
+++ b/prototype/prototype3.tex
@@ -16,8 +16,8 @@ These parts are not necessarily sequential, but following the listed order may b
 
 Therefore, the project here presented focuses more on the quality and functional aspects of applying blockchain to the supply chain, and not so much on the quantitative part, which would include tests to the efficiency of the network (throughput, latency). What this means is that the development had a bigger focus on the model design, access control design,identity management and the implementation and validation of these aspects than on building and testing a realistic node topology. The scope for the last item, integrating existing systems and building external applications,was also narrowed down to the essential.
 
-This section is divided in several parts to explain in which way these items were approached, so that conclusions can then be taken to reach an answer to the question: \textbf{"Is it possible to build a feasible architectural design, by using such a tool implement all these requirements?"}
-%TODO - places with the thesis questions, they need to be consistent with the use of bold or italic
+This section is divided in several parts to explain in which way these items were approached, so that conclusions can then be taken to reach an answer to the question: \textbf{"Is it possible to build a feasible architectural design, by using such a tool, to implement all these requirements?"}
+
 
 %Business network definition here, or in the background and mention it here
 
@@ -240,11 +240,10 @@ With that in mi and thought were given as to how a proper network should look li
 \begin{figure}[h]
     \centering
     \includegraphics[scale=0.50]{media/fabric_topology.png}
-    \caption[Example fabric topology for 3 organizations.]{Example fabric topology for 3 organizations.}
+    \caption[Example fabric topology for 3 organizations.]{Example fabric topology for 3 organizations. Adapted from~\cite{FabricDocPeers}}
     \label{fig:fabric_topology}
 \end{figure}
 
-\todo{Corrigir isto melhor, corrigir localizaçao da figura e por uma referencia na figura. http://hyperledger-fabric.readthedocs.io/en/release-1.1/peers/peers.html}
 
 
 %Mention the file for consensus, the file for node topology and for endorsement.
