--- a/prototype/prototype4.tex
+++ b/prototype/prototype4.tex
@@ -2,7 +2,7 @@
 \label{sec:results-validation}
 
 \subsection{Requirements Validation}
-In order to determine the answer to the third and last of the problem statement questions, \textit{"Is it possible to build a feasible architectural design, by using such a tool implement all these requirements?"}, the suggested design and its implementation have to be evaluated in an objective way. 
+In order to determine the answer to the third and last of the problem statement questions, \textit{"Is it possible to build a feasible architectural design, by using such a tool, to implement all these requirements?"}, the suggested design and its implementation have to be evaluated in an objective way. 
 
 \textbf{The proposed methodology is to validate both the functional and non-functional requirements from the specification}. 
 
@@ -100,7 +100,6 @@ The validation and analysis of the satisfaction of the quality requirements is p
 
 By joining the conclusions reached in both the functional and non-functional requirements, there is a better understanding  towards validating the requirements from the survey and also reaching a final conclusion for the last questions. The validation of the survey requirements is shown in Table~\ref{table:elicited-requirements-validation}.
 
-\todo{pedro: captions das tabelas em cima, em vez de em baixo}
 %After all of these use cases, conclusions about how many were or were not possible, and what does that tell us about the functionalities that the survey concluded were essential: does the prototype feasibly implement them?
 % Please add the following required packages to your document preamble:
 % \usepackage{multirow}
