--- a/references.bib
+++ b/references.bib
@@ -376,9 +376,16 @@ year = {2017}
 @misc{FabricDocArch,
 author = {{IBM Research}},
 pmid = {15014603},
-title = {{Architecture Explained}},
+title = {{Hyperledger Fabric Architecture Explained}},
 url = {http://hyperledger-fabric.readthedocs.io/en/release-1.1/arch-deep-dive.html},
 urldate = {2018-06-26}
+}
+
+@misc{FabricDocPeers,
+author = {{IBM Research}},
+title = {{Hyperledger Fabric Peers Explained}},
+url = {http://hyperledger-fabric.readthedocs.io/en/release-1.1/peers/peers.html},
+urldate = {2018-06-27}
 }
 
 @article{IBMResearch2017,
@@ -547,3 +554,20 @@ url = {https://shippingwatch.com/carriers/Container/article10602520.ece},
 year = {2018}
 }
 
+@misc{ITCILO2018,
+author = {{International Training Centre of the International Labour Organization}},
+file = {:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/435677001eac7514864edfbe1bcc836e42393087.html:html},
+title = {{Understanding global supply chains}},
+url = {https://gbv.itcilo.org/index.php/briefing/show{\_}paragraph/id/127.html},
+urldate = {27/06/2018},
+year = {2018}
+}
+
+@misc{LinuxFoundation2018,
+author = {{Linux Foundation}},
+file = {:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/d7f6ccbf9bcebfea16fff3bcbde614dede46a416.html:html},
+title = {introduction@hyperledger.github.io},
+url = {https://hyperledger.github.io/composer/latest/introduction/introduction.html},
+urldate = {2018-05-20},
+year = {2018}
+}
