--- a/survey/survey1.tex
+++ b/survey/survey1.tex
@@ -1,15 +1,12 @@
-
 \section{Results}
 
 %TODO: mencionar que vai estar nos anexos o inquerito completo? (se der para la por)
 
 
-The results of the survey are analyzed in this chapter. Each group features the graphs and metrics of the corresponding questions, and a brief informal analysis is done, based on the values.
-
-\todo{fcorreia: devido ao que já disse antes, sempre que usares a palavra "group" o mais seguro será dizeres "group of questions"}
+The results of the survey are analyzed in this chapter. Each group of questions features the graphs and metrics of the corresponding questions, and a brief informal analysis is done, based on the values.
 
 
-\subsection{Group 1 - General Information and Participant Classification}
+\subsection{Question Group 1 - General Information and Participant Classification}
 
 %4 EM 1
 %GRAFICO ROLE +
@@ -43,10 +40,6 @@ Data from the participants was inquired, including: role, industry, years of exp
 
 The data, as can be seen in Figure~\ref{fig:group1_graphics}, can be summarized in the following statements:
 
-\todo{fcorreia: "Figure 6.1" (capital F)}
-
-\todo{fcorreia: mais do que descrever textualmente os gráficos, o importante é tirares deles conclusões. tens as duas coisas, o que está bem, mas eu tentaria manter as descrições textuais ao mínimo, para dar um pouco mais de ênfase às conclusões (último parágrafo da secção.}
-
 \begin{itemize}
 \item Most people, about \textbf{68\% of the respondents, have an active role working in areas related to supply chain}. From these, 56\% work in a company directly involved in the processes of supply, manufacturing, logistics, retail or transports and 12\% work in consulting related to these areas. The rest are people with a profile that gives them knowledge about supply chain, be it through education or other type of contact with the field.
 \item \textbf{ most common area of supply chain to work in is, by far, Transport and Logistics}, with 52\% of the respondents saying they have work experience in this field. \textbf{Health and Retail} are also common areas, with 20\% and 16\% respectively.
@@ -54,6 +47,6 @@ The data, as can be seen in Figure~\ref{fig:group1_graphics}, can be summarized 
 \item 62,5\% of the respondents work in medium to big companies (more than 50 workers), from which 41,7\% work in companies with more than 1000 people and 12,5\% in companies with between 200 and 1000 people.
 \end{itemize}
 
-\subsection*{Conclusions from Group 1}
+\subsection*{Conclusions from Question Group 1}
 
 From this data, we can ascertain the general profile of the survey respondents. These are people who, in their majority, work in big companies related to the supply chain, in the various fields, but mostly in transport, logistics and health. The respondents, though they may have had education in this area, do not show a high number of years of experience, with most of them having only up until 5 years of experience.
