--- a/survey/survey2.tex
+++ b/survey/survey2.tex
@@ -1,5 +1,5 @@
 
-\subsection{Group 2 - Blockchain Knowledge and Opinions}
+\subsection{Question Group 2 - Blockchain Knowledge and Opinions}
 
 This section features some questions that inquire about the respondent's knowledge in blockchain, and their opinions about the relationship between cryptocurrencies and blockchain. Are blockchains independent of cryptocurrencies or not? And in which cases? These are questions that will also help decide the need of a cryptocurrency for the design of the system that was proposed.
 
@@ -40,9 +40,7 @@ The first affirmation states that a blockchain, any at all, independently of the
 \label{fig:blockchain_crypto_opinions}
 \end{figure}
 
-\todo{fix images}
-\todo{fix table content: por so 2 casas decimais}
-\todo{fcorreia: está um pouco grande esta tabela. dá para reduzir ao tamanho de letra dos titulos das colunas e das perguntas?}
+
 
 %%%%%% TABLE START %%%%%%%%%%%%%%
 % Please add the following required packages to your document preamble:
@@ -69,7 +67,7 @@ The first affirmation states that a blockchain, any at all, independently of the
 \end{itemize}
 
 
-\subsection*{Conclusions from Group 2}
+\subsection*{Conclusions from Question Group 2}
 
 With these conclusions in mind, one final conclusion can be derived. If blockchains do not need cryptocurrencies to perform well (concluded from the non agreement with affirmation 1) and can generally still be useful without them (affirmation 3), then \textbf{cryptocurrencies should not be considered a necessity, but rather a design option, depending on the benefits} it can bring to a particular use case. Taking this conclusion into account, and also according to the agreement with affirmation 2, then: \textbf{if a blockchain design features a private blockchain, it does not necessarily need a cryptocurrency as a requirement, since incentives are not needede pointed out}. This is an especially interesting conclusion for the proof-of-concept.
 
