--- a/survey/survey3.tex
+++ b/survey/survey3.tex
@@ -1,6 +1,4 @@
-%TODO: CHANGE TABLES CAPTIONS
-
-\subsection{Group 3 - Supply Chain Points of Focus and Problems}
+\subsection{Question Group 3 - Supply Chain Points of Focus and Problems}
 \label{sec-supplychainissues}
 %GRAFICO Inventory management
 This part of the survey focuses on finding out if the issues dug out on the background and pointed out in the Problem Statement chapter are really the ones that plague supply chain management. As such, a battery of questions including the various concerns mentioned was given to the respondents.
@@ -94,7 +92,7 @@ Finally, with the objective of ascerting whether quality assurance is also an is
 Looking at the graphics, the second question has a slightly higher agreement rate than the first one. However, both questions have very high agreement results, with absolutely no disagreement answers and only 1 neutral answer on the second question. It can be concluded that \textbf{quality standards compliance might affect a company's reputation and is also somewhat dependent on the traceability of products and processes they go through}.
 
 
-\subsection*{Conclusions from Group 3}
+\subsection*{Conclusions from Question Group 3}
 % TODO: improve these conclusions
 
 
