--- a/survey/survey4.tex
+++ b/survey/survey4.tex
@@ -1,5 +1,5 @@
 
-\subsection{Group 4 - Supply Chain Standalone Points of Improvement and Blockchain+SC points of Applicability and Improvement}
+\subsection{Question Group 4 - Supply Chain Standalone Points of Improvement and Blockchain+SC points of Applicability and Improvement}
 \label{sec-survey-improvement-functionalities}
 
 The first goal for this part of the survey is to find out the points of improvement for supply chain. What is being questioned are not the issues of the supply chain themselves, which were already asked, but what parts of supply chain, even though they may already work well, could work even better.
@@ -24,10 +24,9 @@ Therefore, the following classification for the lists of results will be adopted
 
 \subsection*{1 - Rank the importance of some aspects which Supply Chains aim to improve.}
  
-(Placeholder image. Should i divide it in more images?)
-
+%Dividir em mais imagens?
 \todo{fcorreia: sim, está muito pequeno para se ler assim. talvez quatro ou cinco destes gráficos lado a lado fiquem ok...}
-%TODO: fix captions
+
 \begin{figure}[h]
 \centering
 \includegraphics[scale=0.35]{media/importance_SC_improvement_points.png}
@@ -185,12 +184,12 @@ Finally, an analysis of the benefits that blockchain can bring to the supply cha
     The selection of these 3 items as the most voted does not seem to be a coincidence. \textbf{Blockchain can be used as a source of truth for the supply chain and this leads to the side benefits of internal trust, better relationships with the partners, less fraud, less tampering, less leaks, among other benefits, all made possible because of the main characteristics: security and traceability.}
 \end{itemize}
 
-\subsection*{Conclusions from Group 4}
+\subsection*{Conclusions from Question Group 4}
 
 This was the most important group of questions in that it provides direct information as to which functionalities the proposed system design should possess and implement. At the same time, these functionalities can be related to the points of improvement found, as well as to the issues validated in the previous groups of questions.
 
 \begin{itemize}
-    \item From group 3, we validated that \textbf{inventory management}, \textbf{quality assurance} and \textbf{getting accurate and timely data} are issues in the supply chain. On this group, the main points of improvement were found to focus on: \textbf{traceability}, \textbf{supply control}, \textbf{fraud detection} and \textbf{synchronization}. In a generalized way, the common links to both issues and points of improvement seem to be \textbf{security}, \textbf{traceability} and \textbf{synchronization}, effectively validating the initial concerns from the problem statement.
+    \item From question group 3, we validated that \textbf{inventory management}, \textbf{quality assurance} and \textbf{getting accurate and timely data} are issues in the supply chain. On this group, the main points of improvement were found to focus on: \textbf{traceability}, \textbf{supply control}, \textbf{fraud detection} and \textbf{synchronization}. In a generalized way, the common links to both issues and points of improvement seem to be \textbf{security}, \textbf{traceability} and \textbf{synchronization}, effectively validating the initial concerns from the problem statement.
     \item Another important conclusion to take from this set of questions are the features to include in the design for the blockchain system. These include the \textit{"Blockchain only features"}, functionalities implemented in an unique to the blockchain, as well as the standard \textit{"Information system features"}, which are the features that were found to be the most important to information systems in a supply chain.
     \item By order of importance, the blockchain features are:
     \begin{itemize}
