--- a/survey/surveyconclusion.tex
+++ b/survey/surveyconclusion.tex
@@ -6,7 +6,7 @@
 
 Having analyzed all the groups of questions from the survey, it should now be possible to have an answer for the first question of the thesis sub-statements, presented in the problem statement: \textit{"What supply chain issues, improvements and requirements do the experts really find the most important?"}.
 
-Most of the conclusions for the survey were summarized in the analysis of group 4. These conclusions included the most important issues of the supply chain, points of improvement, blockchain features and information system functionalities important to the design.
+Most of the conclusions for the survey were summarized in the analysis of question group 4. These conclusions included the most important issues of the supply chain, points of improvement, blockchain features and information system functionalities important to the design.
 
 
 \par \textbf{Issues} - These include \textbf{inventory management}, \textbf{quality assurance}, \textbf{} and \textbf{lack of accurate and timely data}. This last item was confirmed by the respondents to have a correlation to the lack of good integration and synchronization tools and to be one of the possible causes for the difficulties in planning management and product cycle delays.
@@ -42,9 +42,10 @@ Most of the conclusions for the survey were summarized in the analysis of group 
 These are important contributions from the experts of the area, though with a bigger sample, the answers would have been more representative. The next chapter will focus on these requirements as the major points of focus for the design.
 %TODO: bigger conclusion
 
-\todo{fcorreia: algures neste capitulo e/ou no capitulo final de conclusões seria interessante relacionar estas conclusões com as alternativas que analisaste no cap 4 (cargox, eximchain, origintrail, etc.) }
+
 
 
 %subsection: relate to what the already existing projects do
 \subsection{Comparison to the state-of-the-art projects}
-\todo{pedro: It is an interesting comparison, but I already said in the state of the art that no project approached all the concerns, so this is not the most important part to focus at the moment; will do it if I have time, though, after the next chapter...}
+\todo{fcorreia: algures neste capitulo e/ou no capitulo final de conclusões seria interessante relacionar estas conclusões com as alternativas que analisaste no cap 4 (cargox, eximchain, origintrail, etc.) }
+%It is an interesting comparison, but I already said in the state of the art that no project approached all the concerns, so this is not the most important part to focus at the moment; will do it if I have time, though, after the next chapter...}
