--- a/introduction.tex
+++ b/introduction.tex
@@ -26,14 +26,11 @@ Consumer demand is growing more than ever, and with it, concerns are raised as t
 \section{Supply Chains}
 \label{supply_chains}
 \textbf{Supply Chains} can be found, in some form, in nearly every business, spanning many different areas of operation. Traditionally, a supply chain encompasses all the processes and activities that lead from the initial raw materials to the final finished product, as well as all the functions and services within and outside a company. A supply chain can also be defined as the network of entities through which material flows. These entities can be identified as suppliers, carriers, manufacturing sites, distribution centers, retailers, and customers~\cite{Lummus2014}. Naturally, with the upstream and downstream flow of these materials and resources, comes a lot of information on them and on the processes, people and organizations they are associated with. Realistically, the  flow is not always arborescent, as there are many considerations to be taken and decisions to be made. Supply chains have multiple end products with shared components, facilities and capacities~\cite{Ganeshan1995}. As a consequence, the paths taken by the resources and information are not straightforward, but interlace, diverge and converge at different points, go back and forth, as exemplified in Figure~\ref{fig:supplychain_complexity}.
-
-\todo{fcorreia: A fig 1 é tua ou veio de algum sítio? Se não for tua é importante mencionares a fonte. Em todo o caso, parece-me deliberadamente (e desnecessariamente) complexa}
-\todo{fcorreia: Todas as referências a secções, capítulos, figuras, tabelas devem começar por letra maiúscula. Na referência a esta figura está bem, mas não o tens sempre pelo documento fora}
   
 \begin{figure}[ht]
 \centering
 \includegraphics[scale=0.18]{media/supplychain_complexity.jpg}
-\caption{Representation of a garment supply chain and all the relationships it involves}
+\caption[Representation of a garment supply chain and all the relationships it involves]{Representation of a garment supply chain and all the relationships it involves. Taken from the International Training Centre of the International Labour Organization briefing on global supply chains~\cite{ITCILO2018}.}
 \label{fig:supplychain_complexity}
 \end{figure}
   
@@ -101,9 +98,9 @@ Certain designs are going to be proposed, with focus on different issues and giv
 
 \section{Dissertation Structure} \label{sec:struct}
 
-Besides the introduction, this dissertation has 4 more chapters. The state of the art is divided into 3 chapters:~\ref{chap:blockchain},~\ref{chap:blockchain-frameworks} e~\ref{chap:blockchain-applicability}.
+Besides the introduction, this dissertation has 4 more chapters. The state of the art is divided into 3 chapters:~\ref{chap:blockchain},~\ref{sec:blockchain-frameworks} e~\ref{chap:blockchain-applicability}.
 
-In the Chapter~\ref{chap:blockchain}, some important Blockchain concepts are introduced, which are crucial to understanding the rest of the content. In the Chapter~\ref{chap:blockchain-frameworks}, the most relevant Blockchain development platforms are described, such as Ethereum and Hyperledger Fabric. In the chapter ~\ref{chap:blockchain-applicability}, the advantages and disadvantages of applying blockchain technologies to supply chain are discussed, and some related works are shown. Still in this chapter, some important design decisions are also presented.
+In the Chapter~\ref{chap:blockchain}, some important Blockchain concepts are introduced, which are crucial to understanding the rest of the content. In the Chapter~\ref{sec:blockchain-frameworks}, the most relevant Blockchain development platforms are described, such as Ethereum and Hyperledger Fabric. In the chapter ~\ref{chap:blockchain-applicability}, the advantages and disadvantages of applying blockchain technologies to supply chain are discussed, and some related works are shown. Still in this chapter, some important design decisions are also presented.
 
 The last chapter,~\ref{chap:conclusions}, describes the future work, along with some of the metrics that will be used to evaluate this work. It also explains what the expected results will be.
 
