--- a/prototype.tex
+++ b/prototype.tex
@@ -1,4 +1,4 @@
-\chapter{Software Engineering - Architectural Design and Implementation of a Prototype}
+\chapter{Research Validation - Design and Implementation of a Prototype}
 \label{chap:prototype}
 \minitoc \mtcskip \noindent 
 
@@ -9,6 +9,6 @@
 \input{prototype/prototype4.tex}
 \input{prototype/prototypeconclusion.tex}
 
-\todo{pedro:change title}
-%TODO: somewhere in the 1st or 2nd sections, or even here, talk about the survey timeline and how it affected the choice of framework and requirements
-
+%TITLE: put software engineering
+%Research Validation - Design and Implementation of a Prototype
+%Software Engineering - Architectural Design and Implementation of a Prototype
