--- a/thesis.tex
+++ b/thesis.tex
@@ -121,6 +121,15 @@
 
 	\mainmatter
 
+	\todo{pedro: compor captions das tabelas, por em cima e com nome correto}
+	\todo{pedro: compor tamanhos das tabelas}
+	\todo{pedro: por so 2 casas decimais nas tabelas}
+	\todo{pedro: compor imagens dos graficos}
+	\todo{pedro: consistent with the use of bold or italic, especially on thesis questions}
+	\todo{pedro: corrigir localizacoes das figuras}
+	\todo{pedro: captions das questions na survey, compor para terem QUESTION}
+	\todo{pedro: introducao + structure}
+	\todo{pedro: abstract precisa de ser revisto de maneira a sumariar bem todo o conteúdo da tese}
 
 	%\subsection*{2. Naming Conventions and Definitions}
 	%glossary ->    \todo{fcorreia: isto devia aparecer talvez no início do documento, num glossário geral}
@@ -134,14 +143,12 @@
 
 	% final lineup
     \include{introduction}
-	%\include{supplychainproblems}
     \include{blockchain}
     \include{blockchainframeworks}
     \include{blockchainapplicability}
 	\include{problemstatement}
 	\include{survey}
 	\include{prototype}
-	%\include{validation}
 	\include{conclusions}
 
 	%\include{epilogue}
